Revision history for Red

{{$NEXT}}
    - Red::ResultSeq does Positional
    - Fix .head
    - Lots of documentation

0.0.4  2019-08-19T18:39:45+01:00
    - accept && and ||
    - Fix optimizations
    - Red CLI
    - Fix id edition
    - Fix id-map
    - Track if the object is on DB and use it to decide between insert and update
    - Allow creation of Red::Driver::* from an existing DB object
    - ResultSeq.Bool should return count(*) > 0
    - ResultSeq.elems should return something that is comparable to an Int
    - Generate nicer SQL for "is NULL"
    - Support UUID columns on Pg
    - Possible Documentation Error
    - Table and column comments
    - Support temporary tables
    - Add a comment to easily find the query in the code
    - Test if exists id before .^save()ing
    - Provide a ```.perl``` for model objects that only includes the columns, not relations and internals.
    - Provide for no-op table creation if table exists
    - Refactor optimisations
    - Create relations if data provided to .^create
    - Unique column results in duplicated UNIQUE in generated SQL
    - Fix .^load without id


0.0.3  2019-02-27T23:21:09Z
    - add union (∪), intersect(∩) and minus(⊖)
    - make .elems return a Int
    - accept a instance of the db lib on database function
    - create with relationship objects
    - is null
    - return more than 1 column on map
    - UUID
    - bind on infixes
    - bind on insert

0.0.2  2019-01-04T00:35:02-02:00
    - Fix pod

0.0.1  2019-01-03T22:37:53-02:00
    - Initial version