@@ -129,9 +129,14 @@ method grep(&filter --> Red::ResultSeq) is hidden-from-sql-commenting {
 }
 
 #| Changes the query to return only the first row that matches the condition and run it (.grep(...).head)
-method first(&filter --> Red::Model) is hidden-from-sql-commenting {
+multi method first(&filter --> Red::Model) is hidden-from-sql-commenting {
     self.create-comment-to-caller;
     self.grep(&filter).head
+}
+
+multi method first(--> Red::Model) is hidden-from-sql-commenting {
+    self.create-comment-to-caller;
+    self.head
 }
 
 sub hash-to-cond(%val) {
@@ -225,10 +230,10 @@ sub what-does-it-do(&func, \type --> Hash) {
 multi method create-map(\SELF: Red::Model  $_, :filter(&)) is hidden-from-sql-commenting {
     .^where: $.filter
 }
-multi method create-map(\SELF: *@ret where .all ~~ Red::AST, :filter(&)) is hidden-from-sql-commenting {
-    my \Meta  = self.of.HOW.WHAT;
-    my \model = Meta.new(:table(self.of.^table)).new_type: :name(self.of.^name);
-    model.HOW.^attributes.first(*.name eq '$!table').set_value: model.HOW, self.of.^table;
+multi method create-map(\SELF: *@ret where .all ~~ Red::AST, :&filter) is hidden-from-sql-commenting {
+    my \Meta  = SELF.of.HOW.WHAT;
+    my \model = Meta.new(:table(SELF.of.^table)).new_type: :name(SELF.of.^name);
+    model.HOW.^attributes.first(*.name eq '$!table').set_value: model.HOW, SELF.of.^table;
     my $attr-name = 'data_0';
     my @attrs = do for @ret {
         my $name = $.filter ~~ Red::AST::MultiSelect ?? .attr.name.substr(2) !! ++$attr-name;
@@ -256,14 +261,18 @@ multi method create-map(\SELF: *@ret where .all ~~ Red::AST, :filter(&)) is hidd
         );
         $attr does Red::Attr::Column(%data);
         model.^add_attribute: $attr;
-        model.^add_multi_method: $name, my method (Mu:D:) { self.get_value: "\$!$name" }
+        model.^add_multi_method: $name, my method (Mu:D:) { SELF.get_value: "\$!$name" }
         $attr
     }
     model.^add_method: "no-table", my method no-table { True }
     model.^compose;
     model.^add-column: $_ for @attrs;
-    my role CMModel [Mu:U \m] { method of { model } };
-    self.clone(
+    my role CMModel [Mu:U \m] {
+        has &.last-filter = &filter;
+        has $.last-rs  = SELF;
+        method of { model }
+    }
+    SELF.clone(
         :chain($!chain.clone:
             :$.filter,
             :post{ my @data = do for @attrs -> $attr { ."{$attr.name.substr: 2}"() }; @data == 1 ?? @data.head !! |@data },
@@ -274,17 +283,17 @@ multi method create-map(\SELF: *@ret where .all ~~ Red::AST, :filter(&)) is hidd
 }
 
 #| Change what will be returned (does not run the query)
-method map(&filter --> Red::ResultSeq) is hidden-from-sql-commenting {
-    self.create-comment-to-caller;
+method map(\SELF: &filter --> Red::ResultSeq) is hidden-from-sql-commenting {
+    SELF.create-comment-to-caller;
     my Red::AST %next{Red::AST};
     my Red::AST %when{Red::AST};
     my %*UPDATE := %!update;
-    for what-does-it-do(&filter, self.of) -> Pair $_ {
+    for what-does-it-do(&filter, SELF.of) -> Pair $_ {
         (.value ~~ (Red::AST::Next | Red::AST::Empty) ?? %next !! %when){.key} = .value
     }
     my \seq := do if %next {
-        self.where(%next.keys.reduce(-> $agg, $n { Red::AST::OR.new: $agg, $n }))
-    } else { self }
+        SELF.where(%next.keys.reduce(-> $agg, $n { Red::AST::OR.new: $agg, $n }))
+    } else { SELF }
     my \ast = Red::AST::Case.new(:%when);
     seq.create-map: ast, :&filter
 }
@@ -306,11 +315,25 @@ method pick(Whatever --> Red::ResultSeq) is hidden-from-sql-commenting {
 }
 
 #| Returns a ResultAssociative classified by the passed code (does not run the query)
-method classify(&func, :&as = { $_ } --> Red::ResultAssociative) is hidden-from-sql-commenting {
-    self.create-comment-to-caller;
-    my $key   = func self.of;
-    my $value = as   self.of;
-    Red::ResultAssociative[$value, $key].new: :rs(self)
+method classify(\SELF: &func, :&as = { $_ } --> Red::ResultAssociative) is hidden-from-sql-commenting {
+    SELF.create-comment-to-caller;
+    do if self.?last-rs.DEFINITE {
+        self.last-rs.classify(&func o self.last-filter, :as{ ast-value True })
+    } else {
+        my \key   = func SELF.of;
+        my \value = as   SELF.of;
+        Red::ResultAssociative[value, key].new: :rs(SELF)
+    }
+}
+
+multi method Bag {
+    nextsame unless self.?last-rs.DEFINITE;
+    self.last-rs.classify(self.last-filter, :as{ ast-value True }).Bag
+}
+
+multi method Set {
+    nextsame unless self.?last-rs.DEFINITE;
+    self.last-rs.classify(self.last-filter, :as{ ast-value True }).Set
 }
 
 #| Gets the first row returned by the query (run the query)
@@ -359,6 +382,12 @@ method batch(Int $size --> Red::ResultSeqSeq) {
 
 #| Creates a new element of that set
 method create(::?CLASS:D: *%pars) is hidden-from-sql-commenting {
+    self.create-comment-to-caller;
+    $.of.^create: |%pars, |(.should-set with $.filter);
+}
+
+#| Alias for `create`
+method push(::?CLASS:D: *%pars) is hidden-from-sql-commenting {
     self.create-comment-to-caller;
     $.of.^create: |%pars, |(.should-set with $.filter);
 }
